<resources>
    <string name="activity_login">Login</string>
    <string name="app_name">Taynah LOC</string>
    <string name="edtHintLogin">Login</string>
    <string name="edtHintSenha">Senha</string>
    <string name="btnLogin">ENTRAR</string>
    <string name="btnCriarConta">CRIAR CONTA</string>
    <string name="edtHintNomeFuncionario">Nome do Funcionário</string>
    <string name="edtHintConfirmaSenha">Confirmar Senha</string>
    <string name="btnSalvar">SALVAR</string>
    <string name="edtHintTelefone">Telefone</string>
    <string name="edtHintEndereco">Endereço</string>
    <string name="edtHintNomeCliente">Cliente</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="item_menu_clientes">Clientes</string>
    <string name="item_menu_titulos">Titulos</string>
    <string name="item_menu_conta">Minha Conta</string>
    <string name="edtHintISBN">ISBN</string>
    <string name="edtHintNomeTitulo">Título</string>
    <string name="edtHintDescricao">Descricao</string>
    <string name="edtHintAno">Ano</string>
    <string name="edtHintExemplares">Quantidade de Exemplares</string>
    <string name="edtHintTipo">Tipo</string>
</resources>
