<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_criar_conta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.locadorafilmes.activitys.CriarContaActivity">

    <EditText
        android:id="@+id/edtNomeFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:hint="@string/edtHintNomeFuncionario"/>

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edtNomeFuncionario"
        android:hint="@string/edtHintLogin"/>

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edtLogin"
        android:hint="@string/edtHintSenha"/>

    <EditText
        android:id="@+id/edtConfirmaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edtSenha"
        android:hint="@string/edtHintConfirmaSenha"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_taynahloc"
            android:textColor="@android:color/white"
            android:onClick="cancelarCriarConta_onClick"
            android:text="@string/btnCancelar"/>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_taynahloc"
            android:textColor="@android:color/white"
            android:onClick="criarConta_onClick"
            android:text="@string/btnSalvar"/>

    </LinearLayout>

</RelativeLayout>
