<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_titulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.locadorafilmes.activitys.AddTituloActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            android:hint="@string/edtHintISBN"/>

        <EditText
            android:id="@+id/edtNomeTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_below="@id/edtISBN"
            android:hint="@string/edtHintNomeTitulo"/>

        <EditText
            android:id="@+id/edtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:maxLines="5"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_below="@id/edtNomeTitulo"
            android:hint="@string/edtHintDescricao"/>

        <EditText
            android:id="@+id/edtAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:maxLines="5"
            android:scrollHorizontally="true"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:layout_below="@id/edtDescricao"
            android:hint="@string/edtHintAno"/>

        <EditText
            android:id="@+id/edtExemplares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:maxLines="5"
            android:scrollHorizontally="true"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:layout_below="@id/edtAno"
            android:hint="@string/edtHintExemplares"/>

        <EditText
            android:id="@+id/edtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:maxLines="5"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_below="@id/edtExemplares"
            android:hint="@string/edtHintTipo"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/edtTipo"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_taynahloc"
                android:textColor="@android:color/white"
                android:onClick="cancelarAddTitulo_onClick"
                android:text="@string/btnCancelar"/>

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_taynahloc"
                android:textColor="@android:color/white"
                android:onClick="addTitulo_onClick"
                android:text="@string/btnSalvar"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
