<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.locadorafilmes.activitys.AddClienteActivity">

    <EditText
        android:id="@+id/edtNomeCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:hint="@string/edtHintNomeCliente"/>

    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edtNomeCliente"
        android:hint="@string/edtHintEndereco"/>

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edtEndereco"
        android:hint="@string/edtHintTelefone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_taynahloc"
            android:textColor="@android:color/white"
            android:onClick="cancelarAddCliente_onClick"
            android:text="@string/btnCancelar"/>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_taynahloc"
            android:textColor="@android:color/white"
            android:onClick="addCliente_onClick"
            android:text="@string/btnSalvar"/>

    </LinearLayout>

</RelativeLayout>
