<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.locadorafilmes.activitys.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_trab_taynah"/>

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:hint="@string/edtHintLogin"/>

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/edtHintSenha"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtSenha"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_taynahloc"
        android:textColor="@android:color/white"
        android:onClick="login_onClick"
        android:text="@string/btnLogin"/>

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_taynahloc"
        android:textColor="@android:color/white"
        android:onClick="criarConta_onClick"
        android:text="@string/btnCriarConta"/>

</RelativeLayout>
